removed whitespace-nowrap from table container, was preventing text from wrapping when it reached full screen.

--- a/static/section_styles.css
+++ b/static/section_styles.css
@@ -61,7 +61,6 @@ white-space: normal;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     word-wrap: break-word;
-  white-space: nowrap;
 }
 
 .downloads_table {
